--- a/src/components/VolumeChart.css
+++ b/src/components/VolumeChart.css
@@ -1,16 +1,3 @@
-svg {
+.volume-chart {
   font: 12px sans-serif;
-}
-
-path {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 1;
-}
-
-.axis path, .axis line {
-  fill: none;
-  shape-rendering: crispEdges;
-  stroke: grey;
-  stroke-width: 1;
 }
